--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,14 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# Visual Studio Code # 
+.vscode/* 
+.vscode/settings.json
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history.vscode/settings.json
 **/.vscode/
 
 **/.DS_Store
