--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "stripe": "^7.0.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
