--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -55,6 +56,6 @@
     "prettier": "^3.0.1"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^18"
   }
 }
